--- a/index.html
+++ b/index.html
@@ -868,6 +868,12 @@
 											<p>We leverage AI to explore creative designs and rapidly evaluate them, identifying ideal solutions.</p>
 										</div>
 									</li>
+									<li>
+										<div class="vision-bullet-content">
+											<span class="vision-bullet-title">From <strong class="vision-bullet-first">ground</strong> to <strong class="vision-bullet-second">space</strong></span>
+											<p>We redefine engineering design with our AI framework, covering physical systems across ground and space.</p>
+										</div>
+									</li>
 								</ul>
 <!--								<p>The result is a studio that spots bottlenecks fast, spins up design IDEAs faster, and helps Korea’s mechanical and aerospace sectors adopt trustworthy AI.</p>-->
 							</div>
