--- a/index.html
+++ b/index.html
@@ -852,7 +852,7 @@
 								<ul class="vision-list">
 									<li>
 										<div class="vision-bullet-content">
-											<span class="vision-bullet-title">From <strong class="vision-bullet-first">data-driven AI</strong> to <strong class="vision-bullet-second">insight-driven AI</strong></span>
+											<span class="vision-bullet-title">From <strong class="vision-bullet-first">data-driven AI</strong> to <strong class="vision-bullet-second">knowledge-driven AI</strong></span>
 											<p>We embed domain experts' experience and know-how so models learn from real production constraints.</p>
 										</div>
 									</li>
