--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-	<link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Caveat:wght@500;600;700&display=swap" rel="stylesheet">
 
 	<link rel="stylesheet" href="css/open-iconic-bootstrap.min.css">
 	<link rel="stylesheet" href="css/animate.css">
@@ -245,6 +246,29 @@
     justify-content: center;
   }
 
+  .hero-slogan {
+    font-family: 'Caveat', 'DM Sans', sans-serif !important;
+    font-size: 1.65rem !important;
+    font-weight: 700 !important;
+    letter-spacing: 0.03em;
+    margin-bottom: 0.4rem !important;
+  }
+
+  .hero-subtitle {
+    font-family: 'Caveat', 'DM Sans', sans-serif !important;
+    font-size: 1.65rem !important;
+    font-weight: 600 !important;
+    color: #000 !important;
+  }
+
+  .hero-subtitle .txt-fade {
+    font-weight: 700 !important;
+  }
+
+  .hero-color {
+    color: #0E4A84;
+  }
+
   .hero-idea {
     color: #0E4A84;
   }
@@ -285,6 +309,17 @@
   .hero-wrap h2.hero-brand {
     font-size: 1.5rem !important;
     margin-top: 0 !important;
+    margin-bottom: 1.6rem !important;
+  }
+
+  .hero-wrap h2.hero-slogan {
+    font-size: 1.65rem !important;
+    line-height: 1.35 !important;
+  }
+
+  .hero-wrap h2.hero-subtitle {
+    font-size: 1.65rem !important;
+    line-height: 1.35 !important;
   }
 
   .vision-idea-accent {
@@ -807,9 +842,8 @@
 							<span class="txt-rotate" data-period="2000" data-speed="120" data-rotate='[ "Engineering Design &amp; AI"]'></span>
 						</h2>
 						-->
-						<h2> We craft
-							<span class="txt-fade" data-texts='["AI"]' data-fade-speed="20" data-wait="100"></span> tailored for <span style="color: #0E4A84; text-decoration: none; font-weight: 700;">Engineering Design</span>
-						</h2>
+						<h2 class="hero-slogan">We shape <strong class="hero-color">IDEAs</strong> into <strong class="hero-color">IDEAL</strong> design solutions.</h2>
+						<h2 class="hero-subtitle">And <strong><span class="txt-fade" data-texts='["AI"]' data-fade-speed="40" data-wait="200"></span></strong> is our design engine.</h2>
 					</div>
 				</div>
 			</div>
