--- a/index.html
+++ b/index.html
@@ -942,7 +942,7 @@
 									<li>
 										<div class="vision-bullet-content">
 											<span class="vision-bullet-title">From <strong class="vision-bullet-first">ground</strong> to <strong class="vision-bullet-second">space</strong></span>
-											<p>We redefine engineering design with our AI framework, covering physical systems across ground and space.</p>
+											<p>We redefine engineering design with our AI framework for physical systems, from ground to space.</p>
 										</div>
 									</li>
 								</ul>
