--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
 
 <head>
-	<title>한양대 지능형설계연구실</title>
+<!--	<title>한양대 지능형설계연구실</title>-->
+	<title>IDEA LAB</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
