--- a/index.html
+++ b/index.html
@@ -930,7 +930,7 @@
 						<div class="resume-wrap d-flex ftco-animate">
 							<div class="text">
 <!--								<span class="date">Vision Statement</span>-->
-								<h2 class="vision-heading"><span class="vision-idea-accent">IDEA LAB</span> Realizes <span class="vision-idea-accent">IDEAs</span> with AI-Driven Design Framework</h2>
+								<h2 class="vision-heading"><span class="vision-idea-accent">IDEA LAB</span> Realizes <span class="vision-idea-accent">Design IDEAs</span> with AI-Driven Design Framework</h2>
 <!--								<p>We show that AI-driven design matters only when it leverages industrial insight and physics knowledge.</p>-->
 								<ul class="vision-list">
 									<li>
