--- a/index.html
+++ b/index.html
@@ -297,17 +297,15 @@
     margin: 0 auto 0.8rem auto;
   }
 
-  /* 히어로 섹션 오버레이 흰색으로 변경 */
+  /* 히어로 섹션을 단색 배경으로 정리 */
   .hero-wrap {
     position: relative;
-    background-image: url('images/space_NASA2.jpg');
-    background-size: cover;
-    background-position: center;
-    background-attachment: fixed;
+    background-color: #ffffff;
+    background-image: none;
   }
 
   .hero-wrap .overlay {
-    background: rgba(255, 255, 255, 0.3) !important;
+    background: #ffffff !important;
     opacity: 1 !important;
     width: 100% !important;
     height: 100% !important;
@@ -321,6 +319,7 @@
     position: relative;
     display: inline-block;
     padding: 0.5rem 1rem;
+    margin-top: 1.5rem;
   }
 
   .hero-copy h2 {
@@ -335,9 +334,9 @@
     top: -15px;
     width: 120%;
     height: calc(100% + 20px);
-    background: radial-gradient(circle at 20% 20%, rgba(255, 255, 255, 0.85), transparent 60%),
-                radial-gradient(circle at 80% 30%, rgba(255, 255, 255, 0.75), transparent 55%),
-                rgba(255, 255, 255, 0.3);
+    background: radial-gradient(circle at 20% 20%, rgba(214, 232, 255, 0.85), transparent 60%),
+                radial-gradient(circle at 80% 30%, rgba(214, 232, 255, 0.75), transparent 55%),
+                rgba(214, 232, 255, 0.3);
     filter: blur(5px);
     border-radius: 40% / 50%;
     z-index: 1;
@@ -892,7 +891,7 @@
 							<div class="hero-cloud"></div>
 							<h2 class="hero-slogan">We shape <strong class="hero-color">IDEAs</strong> into<span class="hero-mobile-break"></span> <strong class="hero-color">IDEAL</strong> design solutions.</h2>
 						<h2 class="hero-subtitle">And &nbsp<strong><span class="txt-fade" data-texts='["\"AI\""]' data-fade-speed="40" data-wait="200" data-min-opacity="0.3"></span></strong>&nbsp is our design engine.</h2>
-						</div>
+							</div>
 					</div>
 				</div>
 			</div>
