--- a/publications.html
+++ b/publications.html
@@ -63,7 +63,7 @@
     }
 
     #ftco-navbar {
-      background-color: #f3f6fb !important;
+      background-color: #ffffff !important;
       border-bottom: 1px solid rgba(0, 0, 0, 0.05);
     }
 
@@ -196,16 +196,17 @@
     }
 
     .publication-stats {
-      background: #0E4A84;
-      color: #fff;
+      background: #fff;
+      color: #111;
       border-radius: 18px;
       padding: 1.2rem 1.5rem;
-      box-shadow: 0 20px 45px rgba(15, 23, 42, 0.12);
+      border: 1px solid rgba(14, 74, 132, 0.12);
+      box-shadow: 0 20px 45px rgba(15, 23, 42, 0.08);
       text-align: center;
       font-weight: 500;
       margin: 0 auto 1.75rem;
       width: 100%;
-      max-width: 340px;
+      max-width: 360px;
     }
 
     .publication-stats strong {
@@ -233,67 +234,74 @@
     .publication-stat-stars {
       font-family: inherit;
       font-size: 1.05rem;
-      letter-spacing: 0.08em;
-      color: rgba(255, 179, 0, 0.95);
+      letter-spacing: 0.06em;
+      color: #f5c16c;
       text-align: center;
       justify-self: center;
-      text-shadow: -1px -1px 0 rgba(0,0,0,0.35), 1px -1px 0 rgba(0,0,0,0.35), -1px 1px 0 rgba(0,0,0,0.35), 1px 1px 0 rgba(0,0,0,0.35);
     }
 
     .publication-stats-list .publication-stat-item:nth-child(2) .publication-stat-stars {
-      color: rgba(255, 128, 82, 0.95);
+      color: #f5a98c;
     }
 
     .publication-stats-list .publication-stat-item:nth-child(3) .publication-stat-stars {
-      color: rgba(64, 196, 255, 0.95);
+      color: #7fb7ff;
     }
 
     .publication-stats-list .publication-stat-item:nth-child(4) .publication-stat-stars {
-      color: rgba(110, 207, 151, 0.95);
+      color: #82c9b3;
     }
 
     .publication-stat-label {
       display: inline-flex;
       align-items: center;
-      padding: 0.15rem 0.65rem;
+      padding: 0.18rem 0.75rem;
       border-radius: 999px;
       font-weight: 700;
-      color: #fff;
-      box-shadow: 0 6px 15px rgba(0, 0, 0, 0.15);
+      color: #0E4A84;
+      border: 1px solid rgba(14, 74, 132, 0.12);
       justify-self: center;
+      background: rgba(14, 74, 132, 0.05);
     }
 
     .publication-stats-list .publication-stat-item:nth-child(1) .publication-stat-label {
-      background: rgba(255, 210, 92, 0.95);
-      color: #5a3a00;
+      background: rgba(255, 210, 92, 0.2);
+      color: #705200;
+      border-color: rgba(255, 210, 92, 0.4);
     }
 
     .publication-stats-list .publication-stat-item:nth-child(1) .publication-stat-value {
-      color: rgba(255, 210, 92, 0.95);
+      color: #c99821;
     }
 
     .publication-stats-list .publication-stat-item:nth-child(2) .publication-stat-label {
-      background: rgba(255, 128, 82, 0.9);
+      background: rgba(255, 170, 136, 0.22);
+      color: #8a3f1d;
+      border-color: rgba(255, 170, 136, 0.45);
     }
 
     .publication-stats-list .publication-stat-item:nth-child(2) .publication-stat-value {
-      color: rgba(255, 128, 82, 0.95);
+      color: #d4784a;
     }
 
     .publication-stats-list .publication-stat-item:nth-child(3) .publication-stat-label {
-      background: rgba(64, 196, 255, 0.85);
+      background: rgba(127, 183, 255, 0.22);
+      color: #0f4b94;
+      border-color: rgba(127, 183, 255, 0.45);
     }
 
     .publication-stats-list .publication-stat-item:nth-child(3) .publication-stat-value {
-      color: rgba(64, 196, 255, 0.95);
+      color: #3a7fd6;
     }
 
     .publication-stats-list .publication-stat-item:nth-child(4) .publication-stat-label {
-      background: rgba(110, 207, 151, 0.85);
+      background: rgba(130, 201, 179, 0.22);
+      color: #0f5b47;
+      border-color: rgba(130, 201, 179, 0.45);
     }
 
     .publication-stats-list .publication-stat-item:nth-child(4) .publication-stat-value {
-      color: rgba(110, 207, 151, 0.95);
+      color: #3f927d;
     }
 
     .publication-stat-value {
@@ -402,7 +410,7 @@
       <div class="row justify-content-center mb-5 pb-3 mt-4">
         <div class="col-md-8 heading-section text-center ftco-animate">
           <h2 class="mb-4">Publications</h2>
-          <p>Feel free to contact me with any questions or feedback about my publications! (sunwoongy@kaist.ac.kr)</p>
+          <p>Feel free to contact me with any questions or feedback about my publications! (sunwoongy@hanyang.ac.kr)</p>
         </div>
       </div>
 
@@ -460,7 +468,7 @@
             </div>
           </div>
         </div>
-		<div class="pub-subsection ftco-animate"><strong>After joining Hanyang University</strong></div>
+<!--		<div class="pub-subsection ftco-animate"><strong>After joining Hanyang University</strong></div>-->
         <a class="publication-card ftco-animate hoverable" href="https://link.springer.com/article/10.1007/s00158-025-04220-7" target="_blank" rel="noopener noreferrer">
           <span class="pub-label"><strong>12.</strong> Structural and Multidisciplinary Optimization <strong>(IF: 4.0, JCR top 16.5%)</strong></span>
           <p><strong>Year:</strong> 2026</p>
