--- a/join-us.html
+++ b/join-us.html
@@ -83,7 +83,7 @@
     }
 
     #ftco-navbar {
-      background-color: #f3f6fb !important;
+      background-color: #ffffff !important;
       border-bottom: 1px solid rgba(0, 0, 0, 0.05);
     }
 
@@ -278,7 +278,7 @@
       <div class="row justify-content-center">
         <div class="col-lg-10 ftco-animate">
           <div class="contact-card">
-            <p style="text-align:center; text-align-last:center;">모집 관련 문의나 상담을 원하시면 언제든 <a href="mailto:sunwoongy@hanyang.ac.kr">sunwoongy@hanyang.ac.kr</a> 로 연락 주세요.</br>관심 분야와 간단한 소개를 보내주시면 48시간 이내에 답변드리겠습니다.</p>
+            <p style="text-align:center; text-align-last:center;">모집 관련 문의나 상담을 원하시면 간단한 자기 소개 및 관심 분야를 <a href="mailto:sunwoongy@hanyang.ac.kr">sunwoongy@hanyang.ac.kr</a> 로 보내주세요.</p>
           </div>
         </div>
       </div>
