--- a/research.html
+++ b/research.html
@@ -25,29 +25,11 @@
       font-optical-sizing: auto;
       font-size: 15px;
       line-height: 1.7;
-      color: #e5e7eb;
-      background: url('images/space_NASA.png') center/cover fixed no-repeat, #05070c;
+      color: #333;
+      background: #f8f9fa;
       min-height: 100vh;
       position: relative;
       overflow-x: hidden;
-    }
-
-    body.research-body::before,
-    body.research-body::after {
-      content: '';
-      position: fixed;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      pointer-events: none;
-      background-image:
-        radial-gradient(1px 1px at 20% 30%, rgba(255, 255, 255, 0.6), transparent),
-        radial-gradient(1.5px 1.5px at 80% 20%, rgba(255, 255, 255, 0.35), transparent),
-        radial-gradient(1px 1px at 60% 70%, rgba(156, 203, 255, 0.4), transparent);
-      background-size: 500px 500px, 550px 550px, 600px 600px;
-      opacity: 0.5;
-      z-index: -1;
     }
 
     .navbar-brand {
@@ -114,7 +96,7 @@
     }
 
     #ftco-navbar {
-      background-color: #f3f6fb !important;
+      background-color: #ffffff !important;
       border-bottom: 1px solid rgba(0, 0, 0, 0.05);
     }
 
@@ -132,32 +114,39 @@
     .research-hero h2 {
       font-size: 2rem;
       font-weight: 700;
-      color: #ffffff;
+      color: #0E4A84;
+    }
+
+    .hero-statement {
+      font-size: 1.2rem !important;
+      line-height: 1.8;
+      display: block;
     }
 
     .research-hero .subheading {
-      color: #ffffff;
+      color: #0E4A84;
     }
 
     .research-hero p,
     .specialization p,
     .specialization strong {
-      color: #f6f0e0;
+      color: #333;
     }
 
     .research-hero p {
       font-size: 1rem;
-      max-width: 760px;
+      max-width: 920px;
       margin: 0.75rem auto 0;
     }
 
     .research-visual {
       border-radius: 18px;
-      box-shadow: 0 35px 75px rgba(0, 0, 0, 0.5);
+      box-shadow: 0 20px 45px rgba(15, 23, 42, 0.08);
       overflow: hidden;
       margin-bottom: 2rem;
-      background: #fcfaf4;
+      background: #fff;
       padding: 1.25rem;
+      border: 1px solid rgba(14, 74, 132, 0.12);
     }
 
     .research-visual img {
@@ -169,7 +158,7 @@
 
     .key-components {
       margin: 3rem auto;
-      max-width: 1000px;
+      max-width: 1100px;
     }
 
     .key-components h3,
@@ -177,9 +166,8 @@
       text-align: center;
       font-size: 1.5rem;
       font-weight: 700;
-      color: #ffffff !important;
+      color: #0E4A84 !important;
       margin-bottom: 1.5rem;
-      text-shadow: 0 4px 20px rgba(0, 0, 0, 0.65);
     }
 
     .component-grid {
@@ -189,12 +177,17 @@
     }
 
     .component-card {
-      background: rgba(15, 23, 42, 0.75);
+      background: #fff;
       border-radius: 18px;
-      border: 1px solid rgba(96, 165, 250, 0.35);
-      box-shadow: 0 25px 50px rgba(2, 6, 23, 0.6);
+      border: 1px solid rgba(14, 74, 132, 0.12);
+      box-shadow: 0 20px 45px rgba(15, 23, 42, 0.08);
       padding: 1.35rem;
       height: 100%;
+      text-align: center;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: flex-start;
     }
 
     .component-card span,
@@ -205,8 +198,8 @@
       width: 34px;
       height: 34px;
       border-radius: 50%;
-      background: rgba(96, 165, 250, 0.2);
-      color: #93c5fd;
+      background: rgba(14, 74, 132, 0.08);
+      color: #0E4A84;
       font-weight: 800;
       margin-bottom: 0.8rem;
       font-size: 1.2rem;
@@ -216,28 +209,51 @@
       font-size: 1rem;
       font-weight: 700;
       margin-bottom: 0.5rem;
-      color: #f3f4f6;
+      color: #0E4A84;
     }
 
     .component-card p {
       font-size: 0.95rem;
       margin-bottom: 0;
-      color: #cbd5f5;
+      color: #555;
+      text-align: center;
+    }
+
+    .key-components.crimson-theme h3 {
+      color: #B22222 !important;
+    }
+
+    .key-components.crimson-theme .component-card {
+      border: 1px solid rgba(178, 34, 34, 0.16);
+      box-shadow: 0 20px 45px rgba(15, 23, 42, 0.08);
+    }
+
+    .key-components.crimson-theme .component-number {
+      background: rgba(178, 34, 34, 0.08);
+      color: #B22222;
+    }
+
+    .key-components.crimson-theme .component-card h4 {
+      color: #B22222;
+    }
+
+    .key-components.crimson-theme .component-card p {
+      color: #663333;
     }
 
     .specialization {
       margin: 3rem auto 0;
-      max-width: 960px;
+      max-width: 1040px;
       text-align: center;
     }
 
     .specialization p {
       font-size: 1rem;
-      color: #f6f0e0;
+      color: #333;
     }
 
     .specialization strong {
-      color: #f6f0e0;
+      color: #0E4A84;
     }
 
     .workflow-grid {
@@ -249,11 +265,11 @@
     }
 
     .workflow-card {
-      background: rgba(15, 23, 42, 0.75);
+      background: #fff;
       border-radius: 16px;
       padding: 1rem;
-      border: 1px solid rgba(96, 165, 250, 0.35);
-      box-shadow: 0 18px 45px rgba(2, 6, 23, 0.6);
+      border: 1px solid rgba(14, 74, 132, 0.12);
+      box-shadow: 0 20px 45px rgba(15, 23, 42, 0.08);
       text-align: center;
       width: 80%;
     }
@@ -261,14 +277,14 @@
     .workflow-card h5 {
       font-size: 0.95rem;
       font-weight: 700;
-      color: #93c5fd;
+      color: #0E4A84;
       margin-bottom: 0.35rem;
     }
 
     .workflow-card p {
       margin-bottom: 0;
       font-size: 0.9rem;
-      color: #cbd5f5;
+      color: #555;
     }
 
     @media (max-width: 768px) {
@@ -330,66 +346,92 @@
 <body class="research-body" data-spy="scroll" data-target=".site-navbar-target" data-offset="300">
   <div data-navbar data-active="research"></div>
 
-  <section class="ftco-section" id="research-section">
+  <section class="ftco-section bg-light" id="research-section">
     <div class="container">
       <div class="research-hero ftco-animate">
-        <p class="subheading text-uppercase" style="letter-spacing:0.2em; color:#fff;">Research Topic</p>
-        <h2>Physics-Guided AI for Aerodynamic Simulation &amp; Design</h2>
-        <p><strong>We combine physics priors with trustworthy AI workflows to accelerate flow simulations, deliver reliable spatio-temporal forecasts, and guide data-driven design recommendations.</strong></p>
+        <p class="subheading text-uppercase" style="letter-spacing:0.2em; color:#111;">Research Topic</p>
+        <h2>Physics-Guided AI for Engineering Simulation &amp; Design</h2>
+        <p class="hero-statement"><strong>We integrate physical understanding with reliable AI workflows</br>to speed up simulations, predict future physical behavior, and guide better design decisions.</strong></p>
       </div>
 
       <div class="research-visual ftco-animate">
-        <img src="images/Research Overview_v3.png" alt="Physics-guided AI roadmap graphic" />
+        <img src="images/Research%20Overview_260209.png" alt="Physics-guided AI roadmap graphic" />
       </div>
 
       <div class="key-components">
-        <h3 class="text-white">Key Components of Physics-Guided AI</h3>
+        <h3 class="text-white">Key Components of AI-based Design</h3>
         <div class="component-grid">
           <div class="component-card ftco-animate">
             <span class="component-number">1</span>
-            <h4>Data Efficiency &amp; Practicality</h4>
-            <p>Multi-fidelity modeling and flexible data policies keep models reliable even when practical datasets are sparse or noisy.</p>
+            <h4>Simulation</h4>
+            <p>Computer simulations provide physics-consistent data that anchor AI models to real engineering behavior.</p>
           </div>
           <div class="component-card ftco-animate">
             <span class="component-number">2</span>
-            <h4>Physical Consistency</h4>
-            <p>Architectures and loss functions encode governing laws so predictions remain physically meaningful.</p>
+            <h4>AI Modeling</h4>
+            <p>AI models learn how physical systems behave by capturing patterns and rules, not just fitting data points.</p>
           </div>
           <div class="component-card ftco-animate">
             <span class="component-number">3</span>
-            <h4>Robust Spatio-Temporal Prediction</h4>
-            <p>Stable integrators and long-horizon training reduce error accumulation in dynamic flow fields.</p>
+            <h4>Prediction</h4>
+            <p>Trained AI model forecasts how systems evolve over time, turning simulation knowledge into usable future insight.</p>
           </div>
           <div class="component-card ftco-animate">
             <span class="component-number">4</span>
-            <h4>Reliable Uncertainty Quantification</h4>
-            <p>Ensemble-based and Bayesian UQ provide risk-aware metrics so engineers can decide with confidence.</p>
+            <h4>Design Optimization</h4>
+            <p>AI connects prediction to decision-making by searching for better designs under physical and practical constraints.</p>
           </div>
         </div>
       </div>
 
-      <div class="specialization">
-        <h3>Specialization for Aerodynamic Simulation &amp; Design</h3>
-        <p><strong>Our end-to-end framework integrates the four components above across the entire aerodynamic workflow—from data collection and AI modeling to real-time prediction and design recommendation.</strong></p>
-        <div class="workflow-grid">
-          <div class="workflow-card ftco-animate">
-            <h5>1. Flow Simulations</h5>
-            <p>Flexible meshes and multi-fidelity data conversion keep CFD assets reusable for AI pipelines.</p>
+      <div class="key-components crimson-theme">
+        <h3>Our Core AI Techniques for AI-based Design</h3>
+        <div class="component-grid">
+          <div class="component-card ftco-animate">
+            <span class="component-number">1</span>
+            <h4>Data-Independent AI</h4>
+            <p>Prototyping feedback closes the loop so simulations and AI predictions stay grounded in manufacturable hardware.</p>
           </div>
-          <div class="workflow-card ftco-animate">
-            <h5>2. AI Modeling</h5>
-            <p>Physics-aware operators blend analytical priors with data-driven representations for compact training.</p>
+          <div class="component-card ftco-animate">
+            <span class="component-number">2</span>
+            <h4>Long-Term Forecasting</h4>
+            <p>Scaled experiments validate surrogate models and highlight edge cases to improve robustness.</p>
           </div>
-          <div class="workflow-card ftco-animate">
-            <h5>3. Real-time Prediction</h5>
-            <p>Robust time-integration and graph-based solvers deliver trustworthy spatio-temporal forecasts.</p>
+          <div class="component-card ftco-animate">
+            <span class="component-number">3</span>
+            <h4>Uncertainty Quantification</h4>
+            <p>Integrated software pipelines push AI insights into design reviews, control rooms, and digital twins.</p>
           </div>
-          <div class="workflow-card ftco-animate">
-            <h5>4. Aerodynamic Design</h5>
-            <p>Uncertainty-aware design exploration supports optimization and recommendation loops.</p>
+          <div class="component-card ftco-animate">
+            <span class="component-number">4</span>
+            <h4>Generative Design</h4>
+            <p>Continuous monitoring links AI-enabled decisions to measurable performance, closing the improvement loop.</p>
           </div>
         </div>
       </div>
+
+<!--      <div class="specialization">-->
+<!--        <h3>Specialization for Aerodynamic Simulation &amp; Design</h3>-->
+<!--        <p><strong>Our end-to-end framework integrates the four components above across the entire aerodynamic workflow—from data collection and AI modeling to real-time prediction and design recommendation.</strong></p>-->
+<!--        <div class="workflow-grid">-->
+<!--          <div class="workflow-card ftco-animate">-->
+<!--            <h5>1. Flow Simulations</h5>-->
+<!--            <p>Flexible meshes and multi-fidelity data conversion keep CFD assets reusable for AI pipelines.</p>-->
+<!--          </div>-->
+<!--          <div class="workflow-card ftco-animate">-->
+<!--            <h5>2. AI Modeling</h5>-->
+<!--            <p>Physics-aware operators blend analytical priors with data-driven representations for compact training.</p>-->
+<!--          </div>-->
+<!--          <div class="workflow-card ftco-animate">-->
+<!--            <h5>3. Real-time Prediction</h5>-->
+<!--            <p>Robust time-integration and graph-based solvers deliver trustworthy spatio-temporal forecasts.</p>-->
+<!--          </div>-->
+<!--          <div class="workflow-card ftco-animate">-->
+<!--            <h5>4. Aerodynamic Design</h5>-->
+<!--            <p>Uncertainty-aware design exploration supports optimization and recommendation loops.</p>-->
+<!--          </div>-->
+<!--        </div>-->
+<!--      </div>-->
     </div>
   </section>
 
