--- a/team-advisor.html
+++ b/team-advisor.html
@@ -146,7 +146,7 @@
   }
 
   #ftco-navbar {
-    background-color: #f3f6fb !important;
+    background-color: #ffffff !important;
     border-bottom: 1px solid rgba(0, 0, 0, 0.05);
   }
 
@@ -336,7 +336,8 @@
     height: 20px;
   }
 
-  .contact-email {
+  .contact-email,
+  .contact-location {
     display: inline-flex;
     align-items: center;
     gap: 0.5rem;
@@ -350,7 +351,8 @@
     text-decoration: none;
   }
 
-  .contact-email svg {
+  .contact-email svg,
+  .contact-location svg {
     width: 22px;
     height: 22px;
   }
@@ -690,7 +692,7 @@
 
 <body data-spy="scroll" data-target=".site-navbar-target" data-offset="300">
 	<div data-navbar data-active="team"></div>
-	<section class="ftco-section" id="advisor-section">
+	<section class="ftco-section bg-light" id="advisor-section">
 		<div class="container">
 				<div class="row justify-content-center mb-5 pb-3">
 					<div class="col-md-8 heading-section text-center ftco-animate">
@@ -710,13 +712,19 @@
 				<div class="col-md-8 col-lg-8 py-4 py-md-0">
 					<div class="heading-section">
 						<h3 class="mb-3">Sunwoong Yang</h3>
-						<p>I'm Sunwoong Yang, advisor of IDEA LAB at Hanyang University ERICA and a postdoctoral researcher exploring AI-powered aerodynamic design at KAIST.</p>
-						<p>My current work bridges data-driven modeling, reliable surrogate methods, and engineering applications to accelerate intelligent design workflows.</p>
+						<p>I am Sunwoong Yang, an Assistant Professor in the Department of Mechanical Engineering at Hanyang University ERICA since March 2026, following a postdoctoral appointment at KAIST.</p>
+						<p>My research advances AI-powered methods that accelerate mechanical design and make engineering decisions more reliable.</p>
 						<div class="contact-email">
 							<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor">
 								<path d="M2 4h20a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V6a2 2 0 0 1 2-2zm0 2v.52l10 6.25 10-6.25V6H2zm0 12h20V8.5l-9.4 5.9a1 1 0 0 1-1.2 0L2 8.5V18z"/>
 							</svg>
 							<a href="mailto:sunwoongy@hanyang.ac.kr">E-mail: sunwoongy@hanyang.ac.kr</a>
+						</div>
+						<div class="contact-location">
+							<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor">
+								<path d="M12 2a7 7 0 0 0-7 7c0 5.25 7 13 7 13s7-7.75 7-13a7 7 0 0 0-7-7zm0 9.5a2.5 2.5 0 1 1 0-5 2.5 2.5 0 0 1 0 5z"/>
+							</svg>
+							<span>Location: 5공학관 2xx호</span>
 						</div>
 					</div>
 					<div class="social-icons mt-4">
