--- a/team-researchers.html
+++ b/team-researchers.html
@@ -105,7 +105,7 @@
   }
 
   #ftco-navbar {
-    background-color: #f3f6fb !important;
+    background-color: #ffffff !important;
     border-bottom: 1px solid rgba(0, 0, 0, 0.05);
   }
 
@@ -641,7 +641,7 @@
 			<div class="row justify-content-center mb-4 ftco-animate">
 				<div class="col-lg-9">
 					<div class="recruitment-link-card">
-						<p>IDEA LAB은 이제 막 기반을 다지기 시작한 팀으로, 함께할 초기 멤버를 모시고 있습니다.<br>더 자세한 모집 안내는 아래 버튼을 눌러 확인해 주세요.</p>
+						<p>IDEA LAB은 이제 막 기반을 다지기 시작한 팀으로, 함께할 초기 멤버를 모집합니다.<br>더 자세한 모집 안내는 아래 버튼을 눌러 확인해 주세요.</p>
 						<a class="recruitment-link-btn" href="join-us.html">신규 멤버 모집 안내 보기<span class="arrow-icon">→</span></a>
 					</div>
 				</div>
