--- a/research.html
+++ b/research.html
@@ -162,12 +162,18 @@
     }
 
     .key-components h3,
-    .specialization h3 {
+    .specialization h3,
+    .research-overview-title {
       text-align: center;
       font-size: 1.5rem;
       font-weight: 700;
       color: #0E4A84 !important;
       margin-bottom: 1.5rem;
+    }
+
+    .research-overview-title {
+      color: #000 !important;
+      margin-top: 1rem;
     }
 
     .component-grid {
@@ -353,6 +359,8 @@
         <h2>Physics-Guided AI for Engineering Simulation &amp; Design</h2>
         <p class="hero-statement"><strong>We integrate physical understanding with reliable AI workflows</br>to speed up simulations, predict future physical behavior, and guide better design decisions.</strong></p>
       </div>
+
+      <div class="research-overview-title">Research Overview</div>
 
       <div class="research-visual ftco-animate">
         <img src="images/Research%20Overview_260209.png" alt="Physics-guided AI roadmap graphic" />
