--- a/team-advisor.html
+++ b/team-advisor.html
@@ -338,7 +338,7 @@
 
   .contact-email,
   .contact-location {
-    display: inline-flex;
+    display: flex;
     align-items: center;
     gap: 0.5rem;
     font-weight: 600;
