--- a/index.html
+++ b/index.html
@@ -786,6 +786,22 @@
       box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
     }
 
+    /* 모바일에서 News 카드 세로 배치 */
+    .news-item {
+      flex-direction: column;
+      align-items: flex-start;
+    }
+
+    .news-item img {
+      width: 100%;
+      height: auto;
+      margin-bottom: 0.85rem;
+    }
+
+    .news-item > div {
+      width: 100%;
+    }
+
     /* 모바일 navbar height 조정 */
     #ftco-navbar {
       padding-top: 1rem !important;
