--- a/research.html
+++ b/research.html
@@ -398,22 +398,22 @@
           <div class="component-card ftco-animate">
             <span class="component-number">1</span>
             <h4>Data-Independent AI</h4>
-            <p>Prototyping feedback closes the loop so simulations and AI predictions stay grounded in manufacturable hardware.</p>
+            <p>AI remains reliable even with <strong>limited</strong>, <strong>noisy</strong>, or <strong>inconsistent data</strong>, so its performance does not depend on a specific setup.</p>
           </div>
           <div class="component-card ftco-animate">
             <span class="component-number">2</span>
             <h4>Long-Term Forecasting</h4>
-            <p>Scaled experiments validate surrogate models and highlight edge cases to improve robustness.</p>
+            <p>AI predicts <strong>future</strong> physical behavior over <strong>long time horizons</strong> while staying consistent with physical trends.</p>
           </div>
           <div class="component-card ftco-animate">
             <span class="component-number">3</span>
             <h4>Uncertainty Quantification</h4>
-            <p>Integrated software pipelines push AI insights into design reviews, control rooms, and digital twins.</p>
+            <p>AI quantifies <strong>uncertainty</strong> to inform how much confidence engineers should have in each prediction..</p>
           </div>
           <div class="component-card ftco-animate">
             <span class="component-number">4</span>
             <h4>Generative Design</h4>
-            <p>Continuous monitoring links AI-enabled decisions to measurable performance, closing the improvement loop.</p>
+            <p>AI <strong>creates and tests numerous novel design candidates</strong>, enabling efficient discovery of high-performing designs.</p>
           </div>
         </div>
       </div>
