--- a/news.html
+++ b/news.html
@@ -167,6 +167,21 @@
         background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'%3e%3cpath stroke='rgba(0, 0, 0, 1)' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e") !important;
       }
 
+      .news-item {
+        flex-direction: column;
+        align-items: flex-start;
+      }
+
+      .news-item img {
+        width: 100%;
+        height: auto;
+        margin-bottom: 0.85rem;
+      }
+
+      .news-item > div {
+        width: 100%;
+      }
+
       /* 모바일에서 navbar 브랜드 크기 조정 */
       .navbar-brand .brand-acronym, .navbar-brand .brand-lab {
         font-size: 1.5em !important;
